    //
    //plugins {
    //    id 'java'
    //    id 'org.springframework.boot' version '3.5.0'
    //    id 'io.spring.dependency-management' version '1.1.7'
    //}
    //
    //group = 'com.example'
    //version = '0.0.1-SNAPSHOT'
    //
    //java {
    //    toolchain {
    //        languageVersion = JavaLanguageVersion.of(21)
    //    }
    //}
    //
    //repositories {
    //    mavenCentral()
    //}
    //
    //dependencies {
    //    implementation 'org.springframework.boot:spring-boot-starter-web'
    //    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    //    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //    implementation 'org.springframework.boot:spring-boot-starter-validation'
    //    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    //
    //    implementation 'org.jsoup:jsoup:1.17.1'
    //    implementation 'org.modelmapper:modelmapper:3.1.1'
    //    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    //
    //    // ✅ ĐÚNG: MySQL Connector/J
    //    // Dùng BOM của Spring Boot thì có thể bỏ version:
    //    // runtimeOnly 'com.mysql:mysql-connector-j'
    //    // Hoặc pin version rõ ràng (khuyến nghị):
    //    runtimeOnly 'com.mysql:mysql-connector-j:8.4.0'
    //
    //    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    //
    //    compileOnly 'org.projectlombok:lombok'
    //    annotationProcessor 'org.projectlombok:lombok'
    //
    //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    //}
    //
    //tasks.named('test') {
    //    useJUnitPlatform()
    //}
    plugins {
        id 'java'
        id 'org.springframework.boot' version '3.5.0'
        id 'io.spring.dependency-management' version '1.1.7'
    }

    group = 'com.example'
    version = '0.0.1-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        // 🌐 Web + Data
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        // 🧱 Security + JWT
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

        // 🧩 Tools
        implementation 'org.jsoup:jsoup:1.17.1'
        implementation 'org.modelmapper:modelmapper:3.1.1'
        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

        // 🛢️ Database driver
//        runtimeOnly 'com.mysql:mysql-connector-j:8.4.0'
        implementation 'com.mysql:mysql-connector-j:8.4.0'

        // 🧰 Dev & Lombok
        developmentOnly 'org.springframework.boot:spring-boot-devtools'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // 🧪 Test
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
